--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ psutil = "^5.7.0"
 twine = "^3.1.1"
 pytest-sugar = "^0.9.2"
 click = "^7.1.2"
+atheris = "^2.0.3"
 
 [tool.black]
 skip-string-normalization = true
