--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -6,23 +6,23 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to ask a question!
+        Thank you for taking the time to ask a question!
   - type: textarea
     id: question
     attributes:
       label: Ask your question
-      description: A clear and concise description of what your trying to do, as well as the underlying use case.
+      description: A clear and concise description of what you are trying to do and the underlying use case.
       placeholder: What were you expecting to happen?
       value: "I am trying to get custodian to do this ..."  
   - type: textarea
     id: policy
     attributes:
       label: Policy
-      description: Please copy and paste the policy you're trying to run if applicable. Please exclude any account/sensitive information. This will be automatically formatted into code, so no need for backticks.  
+      description: Please copy and paste the policy you are trying to run if applicable. Please exclude any account/sensitive information. Your response will be automatically formatted into YAML, so code-formatting markdown is not necessary.
       render: shell
   - type: textarea
     id: logs
     attributes:
       label: Relevant log/traceback output
-      description: Please copy and paste any relevant log output. Please exclude any account/sensitive information. This will be automatically formatted into code, so no need for backticks.
+      description: Please copy and paste any relevant log output. Please exclude any account/sensitive information. Your response will be automatically formatted into YAML, so code-formatting markdown is not necessary.
       render: shell
