Use folded style for multi-line description field
Use folded as opposed to literal style for the multi-line string block.
Otherwise the line breaks that look natural in markdown source look
awkward when rendered.

--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -5,7 +5,7 @@ labels: [kind/question]
 body:
   - type: markdown
     attributes:
-      value: |
+      value: >
         Thank you for taking the time to ask a question! Check out [our
         gitter](https://gitter.im/cloud-custodian/cloud-custodian) to interact
         with the community
