--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -39,87 +39,63 @@ jobs:
           - python-version: 3.9
             os: macos-latest
         include:
+          - python-version: 3.9
+            os: windows-latest
           - python-version: 3.6
             os: ubuntu-latest
-            tox-target: py36
           - python-version: 3.7
             os: ubuntu-latest
-            tox-target: py37
           - python-version: 3.8
             os: ubuntu-latest
-            tox-target: py38-cov
           - python-version: 3.9
             os: ubuntu-latest
-            tox-target: py39
           - python-version: 3.7
-            tox-target: py37
             os: macos-latest
           - python-version: 3.8
-            tox-target: py38
             os: macos-latest
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 2
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Set up cache
-        uses: actions/cache@v1
-        with:
-          path: .tox/${{ matrix.tox-target }}
-          key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/requirement*.txt') }}
-      - name: Install Test Runner
+
+      - name: Bootstrap poetry
+        shell: bash
         run: |
-          python -m pip install --upgrade pip
-          pip install tox
+          python -m pip install --upgrade poetry==1.1.8
+
+      - name: Configure poetry
+        shell: bash
+        run: poetry config virtualenvs.in-project true
+
+      - name: Set up cache
+        uses: actions/cache@v2
+        id: cache
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Ensure cache is healthy
+        if: steps.cache.outputs.cache-hit == 'true'
+        shell: bash
+        run: timeout 10s poetry run pip --version || rm -rf .venv
+
       - name: Install Deps
         run: |
-          tox -e ${{ matrix.tox-target }} --notest
+          make install-poetry
+
       - name: Test
         run: |
-          tox -vv -e ${{ matrix.tox-target }}
-
-      - name: Coverage Generate XML
-        if: contains(matrix.tox-target, 'py38-cov')
-        run: |
-          ./.tox/${{ matrix.tox-target }}/bin/coverage xml && \
-          bash <(curl -s https://codecov.io/bash) -Z \
-          -v -f coverage.xml
+          make test-poetry
 
       - name: License Check
-        if: contains(matrix.tox-target, 'py39')
+        if: contains(matrix.python-version, '3.9')
         run: |
-          ./.tox/${{ matrix.tox-target }}/bin/python tools/dev/license-check.py
-
-  Test-Windows:
-    # windows can't use the fast cache technique we use in our matrix builds
-    # where we cache the entire tox virtualenv directory, without error.
-    # instead we just cache the pip downloads, and install every time.
-
-    runs-on: windows-latest
-    needs: Lint
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v1
-        with:
-          python-version: 3.7
-      - name: Set up cache
-        uses: actions/cache@v1
-        with:
-          path: ~\AppData\Local\pip\Cache
-          key: pip-${{ 3.8 }}-${{ hashFiles('**/requirement*.txt') }}
-      - name: Install Test Runner
-        run: |
-          python -m pip install pip
-          pip install tox codecov
-      - name: Install Deps
-        run: |
-          tox -e py37 --notest
-      - name: Test
-        run: |
-          tox -e py37
+          poetry run python tools/dev/license-check.py
 
   Analyzer:
     runs-on: ubuntu-latest
@@ -146,19 +122,32 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
         with:
-          python-version: 3.8
+          python-version: 3.9
+      - name: Bootstrap poetry
+        shell: bash
+        run: |
+          python -m pip install --upgrade poetry==1.1.8
+
+      - name: Configure poetry
+        shell: bash
+        run: poetry config virtualenvs.in-project true
+
       - name: Set up cache
-        uses: actions/cache@v1
+        uses: actions/cache@v2
+        id: cache
         with:
-          path: "~/.cache/pip"
-          key: docs-${{ runner.os }}-${{ 3.8 }}-${{ hashFiles('**/requirement*.txt') }}
-      - name: Install Tox
+          path: .venv
+          key: venv-${{ runner.os }}-3.9-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Ensure cache is healthy
+        if: steps.cache.outputs.cache-hit == 'true'
+        shell: bash
+        run: timeout 10s poetry run pip --version || rm -rf .venv
+
+      - name: Install Deps
         run: |
-          python -m pip install --upgrade pip
-          pip install tox
-      - name: Install Build Deps
-        run: |
-          TOXENV=docs tox --notest
+          make install-poetry
+
       - name: Build Docs
         run: |
-          TOXENV=docs tox
+          make sphinx
