pytest via module

--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -90,7 +90,7 @@ jobs:
 
       - name: Test
         run: |
-          make test-poetry
+          . $(PWD)/test.env && poetry run python -m pytest -n auto -p no:sugar -q tests tools
 
       - name: License Check
         if: contains(matrix.python-version, '3.9')
