--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Ensure cache is healthy
         if: steps.cache.outputs.cache-hit == 'true'
         shell: bash
-        run: timeout 10s poetry run pip --version || rm -rf .venv
+        run: poetry run pip --version || rm -rf .venv
 
       - name: Virtualenv
         shell: bash
