duplicate test-poetry line into action yaml

--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -93,7 +93,7 @@ jobs:
 
       - name: Test
         run: |
-          make test-poetry
+          . test.env && poetry run python -m pytest -n auto -p no:sugar -q tests tools
 
       - name: License Check
         if: contains(matrix.python-version, '3.9') && contains(matrix.os, 'ubuntu')
