doh forgot to bash for windows

--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -93,13 +93,9 @@ jobs:
           make install-poetry
 
       - name: Test
+        shell: bash
         run: |
-          if [[ "$OSTYPE" == "msys" ]]
-          then
-            source .\test.env && poetry run python -m pytest -n auto -p no:sugar -q tests tools
-          else
-            . test.env && poetry run python -m pytest -n auto -p no:sugar -q tests tools
-          fi
+          . test.env && poetry run python -m pytest -n auto -p no:sugar -q tests tools
 
       - name: License Check
         if: contains(matrix.python-version, '3.9') && contains(matrix.os, 'ubuntu')
