--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -33,6 +33,13 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.9]
+        include:
+          - os: ubuntu-latest
+            python-version: 3.6
+          - os: ubuntu-latest
+            python-version: 3.7
+          - os: ubuntu-latest
+            python-version: 3.8
     steps:
       - uses: actions/checkout@v2
         with:
