--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -73,7 +73,7 @@ jobs:
           if [[ "$OSTYPE" == "msys" ]]
           then
             echo "$APPDATA\Python\Scripts" >> $GITHUB_PATH
-            echo "$PWD\.venv\bin" >> $GITHUB_PATH
+            echo "$PWD\.venv\Scripts" >> $GITHUB_PATH
             echo "VIRTUAL_ENV=$PWD\.venv" >> $GITHUB_ENV
           else
             echo "$HOME/.local/bin" >> $GITHUB_PATH
@@ -96,8 +96,6 @@ jobs:
           else
              python -m venv .venv
           fi
-          ls .venv
-          poetry config virtualenvs.create false
 
       - name: Install Deps
         if: steps.cache.outputs.cache-hit != 'true'
