we really need to upgrade pip, worth considering ditching windows in ci?

--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -101,6 +101,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         shell: bash
         run: |
+          pip install -U pip
           pip install -U wheel
           poetry install
           if [[ "$OSTYPE" == "msys" ]]
