--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -101,7 +101,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         shell: bash
         run: |
-          pip install -U pip
+          python -m pip install –upgrade pip
           pip install -U wheel
           poetry install
           if [[ "$OSTYPE" == "msys" ]]
