--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -101,7 +101,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         shell: bash
         run: |
-          python -m pip install –U pip
+          python -m pip install --upgrade pip
           pip install -U wheelp
           poetry install
           if [[ "$OSTYPE" == "msys" ]]
