--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -61,7 +61,7 @@ jobs:
         id: cache
         with:
           path: .venv
-          key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}
+          key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
 
       - name: Update PATH
         shell: bash
@@ -103,11 +103,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -U wheel
-          poetry install
           if [[ "$OSTYPE" == "msys" ]]
           then
-            ls .venv
-            ls .venv\\Scripts
+            make install-poetry-windows
+          else
+            make install-poetry
           fi
 
       - name: Test
