--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -26,6 +26,23 @@ jobs:
         run: |
           make lint
 
+  Analyzer:
+    runs-on: ubuntu-latest
+    needs: Lint
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
+      - name: Run Bandit
+        run: |
+          python -m pip install bandit
+          make analyzer-bandit
+      - name: Run Semgrep
+        run: |
+          python -m pip install semgrep
+          make analyzer-semgrep
+
   Tests:
     runs-on: "${{ matrix.os }}"
     needs: Lint
@@ -65,11 +82,7 @@ jobs:
 
       - name: Update PATH
         shell: bash
-        env:
-          CACHE_STATUS: ${{ steps.cache.outputs.cache-hit }}
         run: |
-          echo "cache - $CACHE_STATUS"
-          echo "cur-dir - $PWD"
           if [[ "$OSTYPE" == "msys" ]]
           then
             echo "$APPDATA\Python\Scripts" >> $GITHUB_PATH
@@ -90,12 +103,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         shell: bash
         run: |
-          if [[ -d .venv ]]
-          then
-             echo "cached virtualenv"
-          else
-             python -m venv .venv
-          fi
+          python -m venv .venv
 
       - name: Install Deps
         if: steps.cache.outputs.cache-hit != 'true'
@@ -107,8 +115,23 @@ jobs:
 
       - name: Test
         shell: bash
+        env:
+          COV_RUN: contains(matrix.python-version, '3.8') && contains(matrix.os, 'ubuntu')
         run: |
-          . test.env && poetry run pytest -n auto tests tools
+          if [[ "$COV_RUN" == "true" ]]
+          then
+            make test-poetry-cov
+          else
+            make test-poetry
+          fi
+
+      - name: Upload Code Coverage
+        uses: codecov/codecov-action@v2
+        if: contains(matrix.python-version, '3.8') && contains(matrix.os, 'ubuntu')
+        with:
+          files: ./coverage.xml
+          name: codecov
+          verbose: true
 
       - name: License Check
         if: contains(matrix.python-version, '3.9') && contains(matrix.os, 'ubuntu')
