--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -118,12 +118,13 @@ jobs:
         env:
           COV_RUN: contains(matrix.python-version, '3.8') && contains(matrix.os, 'ubuntu')
         run: |
-          if [[ "$COV_RUN" == "true" ]]
-          then
-            make test-poetry-cov
-          else
-            make test-poetry
-          fi
+          echo "code cov $COV_RUN"
+#          if [[ "$COV_RUN" == "true" ]]
+#          then
+ #           make test-poetry-cov
+ #         else
+          make test-poetry
+#          fi
 
       - name: Upload Code Coverage
         uses: codecov/codecov-action@v2
