--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -116,7 +116,7 @@ jobs:
       - name: Test
         shell: bash
         env:
-          COV_RUN: contains(matrix.python-version, '3.8') && contains(matrix.os, 'ubuntu')
+          COV_RUN: ${{ contains(matrix.python-version, '3.8') && contains(matrix.os, 'ubuntu') }}
         run: |
           echo "code cov $COV_RUN"
           . test.env && poetry run pytest -n auto tests tools
