--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -48,14 +48,13 @@ jobs:
     needs: Lint
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        # , macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.9]
         include:
-#          - os: ubuntu-latest
-#            python-version: 3.6
-#          - os: ubuntu-latest
-#            python-version: 3.7
+          - os: ubuntu-latest
+            python-version: 3.6
+          - os: ubuntu-latest
+            python-version: 3.7
           - os: ubuntu-latest
             python-version: 3.8
     steps:
@@ -119,7 +118,6 @@ jobs:
         env:
           COV_RUN: ${{ contains(matrix.python-version, '3.8') && contains(matrix.os, 'ubuntu') }}
         run: |
-          echo "code cov $COV_RUN"
           if [[ "$COV_RUN" == "true" ]]
           then
             echo "Running Coverage Test"
