--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -43,6 +43,58 @@ jobs:
           python -m pip install semgrep
           make analyzer-semgrep
 
+  Docs:
+    runs-on: ubuntu-latest
+    needs: Lint
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Bootstrap poetry
+        shell: bash
+        run: |
+          curl -sL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py \
+            | python - -y --version 1.1.9
+
+      - name: Set up cache
+        uses: actions/cache@v2
+        id: cache
+        with:
+          path: .venv
+          key: venv-docs-${{ runner.os }}-3.9-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Update PATH
+        shell: bash
+        run: |
+          echo "$APPDATA\Python\Scripts" >> $GITHUB_PATH
+          echo "$PWD\.venv\Scripts" >> $GITHUB_PATH
+          echo "VIRTUAL_ENV=$PWD\.venv" >> $GITHUB_ENV
+
+      - name: Ensure cache is healthy
+        if: steps.cache.outputs.cache-hit == 'true'
+        shell: bash
+        run: poetry run pip --version || rm -rf .venv
+
+      - name: Virtualenv
+        if: steps.cache.outputs.cache-hit != 'true'
+        shell: bash
+        run: |
+          python -m venv .venv
+
+      - name: Install Deps
+        if: steps.cache.outputs.cache-hit != 'true'
+        shell: bash
+        run: |
+          python -m pip install --upgrade pip
+          pip install -U wheel
+          make install-poetry
+
+      - name: Build Docs
+        shell: bash
+        run: |
+          make sphinx
+
   Tests:
     runs-on: "${{ matrix.os }}"
     needs: Lint
