--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -100,16 +100,15 @@ jobs:
     needs: Lint
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        # , macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.9]
         include:
           - os: ubuntu-latest
             python-version: 3.8
-#          - os: ubuntu-latest
-#            python-version: 3.7
-#          - os: ubuntu-latest
-#            python-version: 3.6
+          - os: ubuntu-latest
+            python-version: 3.7
+          - os: ubuntu-latest
+            python-version: 3.6
     steps:
       - uses: actions/checkout@v2
         with:
