try without poetry run to see if we can better streaming results

--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -93,7 +93,7 @@ jobs:
       - name: Build Docs
         shell: bash
         run: |
-          poetry run make sphinx
+          make sphinx
 
   Tests:
     runs-on: "${{ matrix.os }}"
