--- a/tools/c7n_azure/requirements.txt
+++ b/tools/c7n_azure/requirements.txt
@@ -2,17 +2,18 @@ adal==1.2.7
 applicationinsights==0.11.10
 apscheduler==3.7.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0" and python_version < "4")
 azure-common==1.1.27
-azure-core==1.17.0
+azure-core==1.18.0
 azure-cosmos==3.2.0
 azure-cosmosdb-nspkg==2.0.2
 azure-cosmosdb-table==1.0.6
 azure-functions==1.7.2; python_version >= "3" and python_version < "4"
 azure-graphrbac==0.61.1
-azure-identity==1.6.0
+azure-identity==1.6.1
 azure-keyvault-certificates==4.3.0
 azure-keyvault-keys==4.4.0
 azure-keyvault-secrets==4.3.0
 azure-keyvault==4.1.0
+azure-mgmt-advisor==9.0.0
 azure-mgmt-apimanagement==1.0.0
 azure-mgmt-applicationinsights==1.0.0
 azure-mgmt-authorization==1.0.0
@@ -54,23 +55,23 @@ azure-mgmt-subscription==1.0.0
 azure-mgmt-trafficmanager==0.51.0
 azure-mgmt-web==2.0.0
 azure-nspkg==3.0.2
-azure-storage-blob==12.8.1
+azure-storage-blob==12.9.0
 azure-storage-common==2.1.0
-azure-storage-file-share==12.5.0
+azure-storage-file-share==12.6.0
 azure-storage-file==2.1.0
 azure-storage-queue==12.1.6
 certifi==2021.5.30; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
 cffi==1.14.6; python_version >= "3.6"
-charset-normalizer==2.0.4; python_full_version >= "3.6.0" and python_version >= "3"
+charset-normalizer==2.0.6; python_full_version >= "3.6.0" and python_version >= "3"
 click==7.1.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
-cryptography==3.4.7; python_version >= "3.6"
-distlib==0.3.2
+cryptography==3.4.8; python_version >= "3.6"
+distlib==0.3.3
 idna==3.2; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
 importlib-resources==5.2.2; python_version >= "3.6" and python_version < "3.7"
 isodate==0.6.0
 jmespath==0.10.0; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 msal-extensions==0.3.0
-msal==1.13.0
+msal==1.14.0
 msrest==0.6.21
 msrestazure==0.6.4
 netaddr==0.7.20
@@ -80,6 +81,7 @@ pycparser==2.20; python_version >= "3.6" and python_full_version < "3.0.0" or py
 pyjwt==1.7.1
 python-dateutil==2.8.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
 pytz==2021.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
+pywin32==301
 requests-oauthlib==1.3.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
 requests==2.26.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 six==1.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
