--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -84,17 +84,20 @@ jobs:
 
       - name: Ensure cache is healthy
         if: steps.cache.outputs.cache-hit == 'true'
+        id: cache_check
         shell: bash
-        run: poetry run custodian version || rm -rf .venv
+        run: |
+          poetry run custodian version && echo "::set-output name=venv::success" \
+          || rm -rf .venv && echo "::set-output name=venv::recreate"
 
       - name: Virtualenv
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.cache.outputs.cache-hit != 'true' || steps.cache_check.venv != 'success'
         shell: bash
         run: |
           python -m venv .venv
 
       - name: Install Deps
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.cache.outputs.cache-hit != 'true' || steps.cache_check.venv != 'success'
         shell: bash
         run: |
           python -m pip install --upgrade pip
@@ -159,17 +162,20 @@ jobs:
 
       - name: Ensure cache is healthy
         if: steps.cache.outputs.cache-hit == 'true'
+        id: cache_check
         shell: bash
-        run: poetry run custodian version || rm -rf .venv
+        run: |
+          poetry run custodian version && echo "::set-output name=venv::success" \
+          || rm -rf .venv && echo "::set-output name=venv::recreate"
 
       - name: Virtualenv
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.cache.outputs.cache-hit != 'true' || steps.cache_check.venv != 'success'
         shell: bash
         run: |
           python -m venv .venv
 
       - name: Install Deps
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.cache.outputs.cache-hit != 'true' || steps.cache_check.venv != 'success'
         shell: bash
         run: |
           python -m pip install --upgrade pip
