missing outputs namespace on step

--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -167,18 +167,18 @@ jobs:
           poetry run custodian version && echo "::set-output name=venv::success" || rm -rf .venv && echo "::set-output name=venv::recreate"
 
       - name: Virtualenv
-        if: steps.cache.outputs.cache-hit != 'true' || steps.cache_check.venv != 'success'
+        if: steps.cache.outputs.cache-hit != 'true' || steps.cache_check.outputs.venv != 'success'
         shell: bash
         env:
-          CHECK_VENV: ${{ steps.cache_check.venv }}
-          CACHE_HIT: ${{ steps.cache.cache-hit }}
+          CHECK_VENV: ${{ steps.cache_check.outputs.venv }}
+          CACHE_HIT: ${{ steps.cache.outputs.cache-hit }}
         run: |
           echo "check venv $CHECK_VENV"
           echo "cache hit $CACHE_HIT"
           python -m venv .venv
 
       - name: Install Deps
-        if: steps.cache.outputs.cache-hit != 'true' || steps.cache_check.venv != 'success'
+        if: steps.cache.outputs.cache-hit != 'true' || steps.cache_check.outputs.venv != 'success'
         shell: bash
         run: |
           python -m pip install --upgrade pip
