more package updates

--- a/tools/c7n_logexporter/requirements.txt
+++ b/tools/c7n_logexporter/requirements.txt
@@ -1,1 +1,2 @@
-click==7.1.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
+Warning: The lock file is not up to date with the latest changes in pyproject.toml. You may be getting outdated dependencies. Run update to update them.
+
