--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -90,13 +90,13 @@ jobs:
           (poetry run custodian version && echo "::set-output name=venv::success") || (rm -rf .venv && echo "::set-output name=venv::recreate")
 
       - name: Virtualenv
-        if: steps.cache.outputs.cache-hit != 'true' || steps.cache_check.venv != 'success'
+        if: steps.cache.outputs.cache-hit != 'true' || steps.cache_check.outputs.venv != 'success'
         shell: bash
         run: |
           python -m venv .venv
 
       - name: Install Deps
-        if: steps.cache.outputs.cache-hit != 'true' || steps.cache_check.venv != 'success'
+        if: steps.cache.outputs.cache-hit != 'true' || steps.cache_check.outputs.venv != 'success'
         shell: bash
         run: |
           python -m pip install --upgrade pip
