--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -8,7 +8,7 @@ jobs:
 - job: 'CustodianCask'
   displayName: 'Tool Tests - Cask'
   pool:
-    vmImage: 'Ubuntu-18.04'
+    vmImage: 'ubuntu-latest'
   steps:
   - checkout: self
     fetchDepth: 1
