dep updates / dep tooling updates

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" a
 attrs==21.2.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 aws-xray-sdk==2.8.0
 bleach==4.1.0; python_version >= "3.6"
-boto3==1.19.4; python_version >= "3.6"
-botocore==1.22.4; python_version >= "3.6"
+boto3==1.19.11; python_version >= "3.6"
+botocore==1.22.11; python_version >= "3.6"
 certifi==2021.10.8; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
 cffi==1.15.0; sys_platform == "linux" and python_version >= "3.6"
 charset-normalizer==2.0.7; python_full_version >= "3.6.0" and python_version >= "3.6"
@@ -22,24 +22,24 @@ iniconfig==1.1.1; python_version >= "3.6"
 jeepney==0.7.1; sys_platform == "linux" and python_version >= "3.6"
 jmespath==0.10.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.3.0" and python_version >= "3.6" and python_version < "4.0"
 jsonpatch==1.32; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
-jsonpointer==2.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+jsonpointer==2.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 jsonschema==3.2.0
 keyring==23.2.1; python_version >= "3.6"
 mccabe==0.6.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 mock==4.0.3; python_version >= "3.6"
 multidict==5.2.0; python_version >= "3.6"
-packaging==21.0; python_version >= "3.6"
+packaging==21.2; python_version >= "3.6"
 pkginfo==1.7.1; python_version >= "3.6"
 placebo==0.9.0
 pluggy==1.0.0; python_version >= "3.6"
 portalocker==1.7.1; python_version >= "3.6" and python_version < "4.0"
 psutil==5.8.0; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
-py==1.10.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+py==1.11.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pycodestyle==2.7.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 pycparser==2.20; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "linux" or sys_platform == "linux" and python_version >= "3.6" and python_full_version >= "3.4.0"
 pyflakes==2.3.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 pygments==2.10.0; python_version >= "3.6"
-pyparsing==3.0.1; python_version >= "3.6"
+pyparsing==2.4.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
 pyrsistent==0.18.0; python_version >= "3.6"
 pytest-cov==2.12.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 pytest-forked==1.3.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.5.0" and python_version >= "3.6" and python_version < "4.0"
@@ -62,11 +62,11 @@ tabulate==0.8.9
 termcolor==1.1.0
 toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 tqdm==4.62.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-twine==3.4.2; python_version >= "3.6"
+twine==3.5.0; python_version >= "3.6"
 typing-extensions==3.10.0.2; python_version < "3.8" and python_version >= "3.6"
 urllib3==1.26.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
 vcrpy==4.1.1; python_version >= "3.5"
 webencodings==0.5.1; python_version >= "3.6"
-wrapt==1.13.2; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.5"
-yarl==1.7.0; python_version >= "3.6"
+wrapt==1.13.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.5"
+yarl==1.7.2; python_version >= "3.6"
 zipp==3.6.0; python_version >= "3.6" and python_version < "3.8"
