--- a/tools/c7n_sphinxext/requirements.txt
+++ b/tools/c7n_sphinxext/requirements.txt
@@ -12,9 +12,9 @@ importlib-metadata==4.8.1; python_version < "3.8" and python_version >= "3.6"
 jinja2==3.0.2; python_version >= "3.6"
 markdown==3.0.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
 markupsafe==2.0.1; python_version >= "3.6"
-packaging==21.0; python_version >= "3.6"
+packaging==21.2; python_version >= "3.6"
 pygments==2.10.0; python_version >= "3.5"
-pyparsing==3.0.1; python_version >= "3.6"
+pyparsing==2.4.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
 pytz==2021.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.5"
 recommonmark==0.6.0
 requests==2.26.0; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
