--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -117,7 +117,7 @@ jobs:
         python-version: [3.9]
         include:
           - os: ubuntu-latest
-            python-version: 3.10
+            python-version: "3.10"
           - os: ubuntu-latest
             python-version: 3.8
           - os: ubuntu-latest
