--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,14 @@ click = "^8.0"
 
 [tool.black]
 skip-string-normalization = true
+
+[tool.pylint.messages_control]
+disable = [
+  "missing-docstring",
+  "invalid-name",
+  "too-many-lines",
+  "unused-argument",
+  "fixme",
+  "empty-docstring",
+  "logging-not-lazy"
+]
