--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,8 @@ argcomplete = ">=1.12.3"
 python-dateutil = "^2.8.2"
 pyyaml = ">=5.4.0"
 tabulate = "^0.8.6"
-importlib-metadata = ">1.7.0;python_version<3.8"
-# docutils = ">=0.14,<0.18"
+# importlib-metadata = ">1.7.0;python_version<3.8"
+docutils = ">=0.14,<0.18"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0.0"
@@ -38,7 +38,7 @@ coverage = "^5.0.3"
 placebo = "^0.9.0"
 pytest-xdist = "^2.0"
 pytest-cov = "^2.8.1"
-pytest-terraform = "^0.5.0"
+pytest-terraform = "^0.6.0"
 mock = "^4.0.1"
 vcrpy = "^4.0.2"
 aws-xray-sdk = "^2.5.0"
