--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,12 @@ click==8.0.3; python_version >= "3.6"
 colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and platform_system == "Windows" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0" and platform_system == "Windows"
 coverage==5.5; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0" and python_version < "4")
 cryptography==36.0.1; sys_platform == "linux" and python_version >= "3.7"
-docutils==0.18.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+docutils==0.17.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 execnet==1.9.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.5.0" and python_version >= "3.6" and python_version < "4.0"
 flake8==4.0.1; python_version >= "3.6"
 future==0.18.2; python_version >= "2.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
 idna==3.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-importlib-metadata==4.2.0; python_version >= "3.6"
+importlib-metadata==4.2.0; python_version == "3.7"
 importlib-resources==5.4.0; python_version < "3.9" and python_version >= "3.7"
 iniconfig==1.1.1; python_version >= "3.6"
 jeepney==0.7.1; sys_platform == "linux" and python_version >= "3.7"
@@ -33,7 +33,7 @@ packaging==21.3; python_version >= "3.6"
 pkginfo==1.8.2; python_version >= "3.6"
 placebo==0.9.0
 pluggy==1.0.0; python_version >= "3.6"
-portalocker==1.7.1; python_version >= "3.6" and python_version < "4.0"
+portalocker==2.3.2; python_version >= "3.6" and python_version < "4.0"
 psutil==5.9.0; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 py==1.11.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pycodestyle==2.8.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
@@ -45,7 +45,7 @@ pyrsistent==0.18.1; python_version >= "3.7"
 pytest-cov==2.12.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 pytest-forked==1.4.0; python_version >= "3.6" and python_version < "4.0"
 pytest-sugar==0.9.4
-pytest-terraform==0.5.3; python_version >= "3.6" and python_version < "4.0"
+pytest-terraform==0.6.1; python_version >= "3.6" and python_version < "4.0"
 pytest-xdist==2.5.0; python_version >= "3.6"
 pytest==6.2.5; python_version >= "3.6"
 python-dateutil==2.8.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
