--- a/tools/c7n_policystream/pyproject.toml
+++ b/tools/c7n_policystream/pyproject.toml
@@ -22,7 +22,7 @@ c7n-policystream = 'policystream:cli'
 python = "^3.7"
 click = "^8.0"
 requests = "^2.22.0"
-pyyaml = "^5.3"
+pyyaml = ">=5.4.0"
 pygit2 = "~1.7"
 boto3 = "^1.12.0"
 
