--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ argcomplete = ">=1.12.3"
 python-dateutil = "^2.8.2"
 pyyaml = ">=5.4.0"
 tabulate = "^0.8.6"
-# importlib-metadata = ">1.7.0;python_version<3.8"
+importlib-metadata = ">=4.11.1"
 docutils = ">=0.14,<0.18"
 
 [tool.poetry.dev-dependencies]
