--- a/tools/c7n_mailer/requirements.txt
+++ b/tools/c7n_mailer/requirements.txt
@@ -1,12 +1,12 @@
 attrs==21.4.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
-boto3==1.21.4; python_version >= "3.6"
-botocore==1.24.4; python_version >= "3.6"
+boto3==1.21.5; python_version >= "3.6"
+botocore==1.24.5; python_version >= "3.6"
 certifi==2021.10.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
 charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3"
 datadog==0.34.1
 decorator==5.1.1; python_version >= "3.5"
 idna==3.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-importlib-metadata==4.11.1; python_version < "3.8" and python_version >= "3.7"
+importlib-metadata==4.11.1; python_version >= "3.7"
 importlib-resources==5.4.0; python_version < "3.9" and python_version >= "3.7"
 jinja2==3.0.3; python_version >= "3.6"
 jmespath==0.10.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
