Exclude subproject virtual environments from flake8 checks

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,15 @@
 [flake8]
-exclude = setup.py,.git,venv,python2.7,bin,docs,__init__.py,.tox,tools/c7n_azure/c7n_azure/cache
+exclude =
+    setup.py,
+    .git,
+    venv,
+    python2.7,
+    bin,
+    docs,
+    __init__.py,
+    .tox,
+    tools/c7n_azure/c7n_azure/cache,
+    tools/*/.venv
 ; E401 is 'multiple imports on one line' -- no big deal
 ; E128 is under identation
 ; E203 is whitespace before ':'
